--- a/style.css
+++ b/style.css
@@ -75,20 +75,15 @@
     text-align: center;
     padding: 15px;
     background: #333;
-    color: white;
+    color: rgb(9, 255, 13);
     margin-top: 20px;
   }
-  
-  /* 9. Responsive Design */
-  @media (max-width: 768px) {
-    nav {
-      flex-direction: column;
-    }
-  
-    nav a {
-      display: block;
-      text-align: center;
-      margin-bottom: 5px;
-    }
+
+  footer {
+    text-align: center;
+    padding: 15px;
+    background: #333;
+    color: rgb(191, 0, 255);
+    margin-top: 20px;
   }
   
